--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -159,8 +159,15 @@ nav{
     height: 65%;
     width: 74.9%;
 }
-.Agregar:hover .info{
-   display: hidden;
+.poligono{
+    background-color: transparent;
+    position: absolute;
+    opacity: 80%;
+    top: 60%;
+    left: 95%;
+}
+.mensaje:hover .info{
+   display: block;
 }
 .Agregar{
     display:flex;
@@ -227,9 +234,12 @@ nav{
     color: #5B5B5B;
 }
 .info{
-    display:block;
+    border-radius: 5px;
+    display:none;
+    text-align: center;
     position: absolute;
     color: #fff;
+    width: 25%;
     height: 7%;
     right: 5%;
     bottom:92%;
